fix(VAppBar): allow menu to overflow

--- a/packages/vuetify/src/components/VAppBar/VAppBar.sass
+++ b/packages/vuetify/src/components/VAppBar/VAppBar.sass
@@ -3,7 +3,7 @@
 
 // Block
 .v-app-bar
-  contain: content
+  contain: layout
 
 // Modifier
 .v-app-bar.v-app-bar--fixed
